--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,6 @@ gradle-app.setting
 
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,intellij+all,intellij+iml,java
+
+*.p12
+certs/
