--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,53 +43,9 @@ services:
       CONFLUENT_METRICS_TOPIC_REPLICATION: 1
       PORT: 9021
 
-
-#  rest-proxy:
-#    image: confluentinc/cp-kafka-rest:7.3.0
-#    depends_on:
-#      - broker
-#      - schema-registry
-#    ports:
-#      - 8082:8082
-#    hostname: rest-proxy
-#    container_name: rest-proxy
-#    environment:
-#      KAFKA_REST_HOST_NAME: rest-proxy
-#      KAFKA_REST_BOOTSTRAP_SERVERS: 'broker:29092'
-#      KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
-#      KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
-
-#  zookeeper:
-#    image: confluentinc/cp-zookeeper:7.3.0
-#    container_name: zookeeper
-#    environment:
-#      ZOOKEEPER_CLIENT_PORT: 2181
-#      ZOOKEEPER_TICK_TIME: 2000
-#
-#  broker:
-#    image: confluentinc/cp-kafka:7.3.0
-#    container_name: broker
-#    ports:
-#      - "9092:9092"
-#    depends_on:
-#      - zookeeper
-#    environment:
-#      KAFKA_BROKER_ID: 1
-#      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
-#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://broker:29092
-#      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-#      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-#      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-
-#  kafka-ui:
-#    image: provectuslabs/kafka-ui
-#    container_name: kafka-ui
-#    depends_on:
-#      - broker
-#    ports:
-#      - "8080:8080"
-#    restart: always
-#    environment:
-#      - KAFKA_CLUSTERS_0_NAME=local
-#      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=broker:29092
+  monitor:
+    image: delivery-monitor:latest
+    depends_on:
+      - broker
+    environment:
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29092'
