--- a/backend/store/src/main/resources/config.properties
+++ b/backend/store/src/main/resources/config.properties
@@ -1,3 +1,5 @@
 keystore_path=certs/server_sign_keystore.p12
 keystore_pass=ahmai6oacaitioNg3requohk9OeHijoo
+keystore_pin_path=certs/secret_keystore.p12
+keystore_pin_pass=kiuw2ka7ahSeeTh2wieb6ohy1Xu3haj4
 fms_url=http://localhost:5000
