--- a/robot.docker-compose.yml
+++ b/robot.docker-compose.yml
@@ -4,8 +4,6 @@ services:
     image: confluentinc/cp-zookeeper:7.3.0
     hostname: zookeeper
     container_name: zookeeper
-    ports:
-      - "2181:2181"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -17,13 +15,12 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - "9092:9092"
-      - "9101:9101"
+      - "9031:9092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29000,PLAINTEXT_HOST://localhost:9031
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
 
@@ -36,7 +33,7 @@ services:
     ports:
       - "9021:9021"
     environment:
-      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'broker:29092'
+      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'broker:29000'
       CONTROL_CENTER_REPLICATION_FACTOR: 1
       CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
@@ -48,13 +45,84 @@ services:
     depends_on:
       - broker
     environment:
-      KAFKA_BOOTSTRAP_SERVER: 'broker:29092'
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29000'
+
+  comms:
+    image: delivery-communication:latest
+    depends_on:
+      - monitor
+    environment:
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29000'
+      MESSAGES: 'ccu.DeliveryStatusRequest,ccu.NewTaskRequest'
+      SERVER_URI: '172.17.0.1:9010'
 
   hmi:
     image: delivery-hmi:latest
+    ports:
+      - "9041:8888"
     depends_on:
       - monitor
-    ports:
-      - "8888:8888"
     environment:
-      KAFKA_BOOTSTRAP_SERVER: 'broker:29092'
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29000'
+
+  motion:
+    image: delivery-motion:latest
+    depends_on:
+      - monitor
+    environment:
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29000'
+
+  odom:
+    image: delivery-odometer:latest
+    depends_on:
+      - monitor
+      - motion
+    environment:
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29000'
+
+  location:
+    image: delivery-location:latest
+    depends_on:
+      - monitor
+      - odom
+    environment:
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29000'
+      SPEED_TAMPERED_TRIGGER: 5
+      DISTANCE_TAMPERED_TRIGGER: 50
+      UPDATE_INTERVAL_SEC: 10
+      SERVICES: 'odom'
+
+  sensors:
+    image: delivery-sensors:latest
+    depends_on:
+      - monitor
+      - location
+    environment:
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29000'
+
+  locker:
+    image: delivery-locker:latest
+    depends_on:
+      - monitor
+    environment:
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29000'
+
+  central:
+    image: delivery-central:latest
+    restart: always
+    depends_on:
+      - monitor
+      - comms
+      - motion
+      - location
+      - sensors
+      - locker
+    volumes:
+      - ./certs/secret_keystore.p12:/app/secret_keystore.p12:ro
+      - ./certs/client_sign_keystore.p12:/app/client_sign_keystore.p12:ro
+    environment:
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29000'
+      AES_KS_PATH: '/app/secret_keystore.p12'
+      AES_KS_PASS: 'kiuw2ka7ahSeeTh2wieb6ohy1Xu3haj4'
+      SIGN_KS_PATH: '/app/client_sign_keystore.p12'
+      SIGN_KS_PASS: 'uogh7noh4Ree8huZ9shae7vi6ohphohj'
