--- a/server.docker-compose.yml
+++ b/server.docker-compose.yml
@@ -4,8 +4,6 @@ services:
     image: confluentinc/cp-zookeeper:7.3.0
     hostname: zookeeper
     container_name: zookeeper
-    ports:
-      - "2181:2181"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -17,13 +15,12 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - "9092:9092"
-      - "9101:9101"
+      - "9030:9092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29000,PLAINTEXT_HOST://localhost:9030
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
 
@@ -34,9 +31,9 @@ services:
     depends_on:
       - broker
     ports:
-      - "9021:9021"
+      - "9020:9021"
     environment:
-      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'broker:29092'
+      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'broker:29000'
       CONTROL_CENTER_REPLICATION_FACTOR: 1
       CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
@@ -48,9 +45,9 @@ services:
     depends_on:
       - broker
     environment:
-      KAFKA_BOOTSTRAP_SERVER: 'broker:29092'
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29000'
 
-  authentication-service:
+  auth:
     image: delivery-authentication:latest
     depends_on:
       - monitor
@@ -59,13 +56,24 @@ services:
     environment:
       KEYSTORE_PATH: '/app/secret_keystore.p12'
       KEYSTORE_PASSWORD: 'kiuw2ka7ahSeeTh2wieb6ohy1Xu3haj4'
-      KAFKA_BOOTSTRAP_SERVER: 'broker:29092'
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29000'
 
-  hmi:
-    image: delivery-hmi:latest
+  comms:
+    image: delivery-communication:latest
     depends_on:
       - monitor
-    ports:
-      - "8888:8888"
     environment:
-      KAFKA_BOOTSTRAP_SERVER: 'broker:29092'
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29000'
+      MESSAGES: 'ccu.DeliveryStatusRequest,ccu.NewTaskRequest'
+      SERVER_URI: '172.17.0.1:9011'
+
+  fms:
+    image: delivery-fleet-manager:latest
+    ports:
+      - "9040:8888"
+    depends_on:
+      - monitor
+      - auth
+      - comms
+    environment:
+      KAFKA_BOOTSTRAP_SERVER: 'broker:29000'
